# endrs

./: .gitignore  README.md  pyproject.toml
rust/: Cargo.toml
rust/src/: consumed.rs  graph.rs  incremental.rs  inference.rs  item_cf.rs  lib.rs  ordering.rs  serialization.rs  similarities.rs  sparse.rs  swing.rs  user_cf.rs  utils.rs
src/endrs/: types.py
src/endrs/algorithms/: caser.py  deepfm.py  dpp.py  item_cf.py  rnn4rec.py  swing.py  two_tower.py  user_cf.py
src/endrs/bases/: cf_base.py  dyn_embed_base.py  torch_base.py  torch_embed_base.py
src/endrs/data/: batch.py  collators.py  consumed.py  data_info.py  dataset.py  sequence.py  split.py
src/endrs/evaluation/: evaluator.py  metrics.py
src/endrs/feature/: building.py  config.py  extraction.py  feat_info.py  mapping.py  processor.py
src/endrs/inference/: cold_start.py  postprocess.py  preprocess.py  ranking.py
src/endrs/sampling/: negatives.py
src/endrs/torchops/: dnn.py  embedding.py  layers.py  loss.py
src/endrs/utils/: constants.py  hashing.py  logger.py  misc.py  sparse.py  validate.py
