[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "endrs"
version = "0.1.0"
description = "Versatile end-to-end recommender system."
authors = [
    { name = "massquantity", email = "jinxin_madie@163.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.4.0",
    "loguru>=0.7.0",
    "numpy>=1.23.5",
    "pandas>=2.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.8.0",
    "torch>=2.4.0",
    "xxhash>=3.5.0",
]

[tool.maturin]
# exclude `extension-module` in rust testing, only used in maturin build
# https://pyo3.rs/v0.23.5/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
features = ["pyo3/extension-module", "pyo3/abi3-py312"]
module-name = "endrs_ext"
manifest-path = "rust/Cargo.toml"
python-source = "src"
python-packages = ["endrs"]
