[package]
name = "endrs-extension"
version = "0.1.0"
edition = "2021"

[lib]
name = "endrs_ext"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py10" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
pyo3 = { version = "0.23.3", features = ["extension-module", "abi3-py310"] }
