[package]
name = "endrs-extension"
version = "0.1.0"
edition = "2021"

[lib]
name = "endrs_ext"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
dashmap = "5.5.3"
flate2 = "1.0"
fxhash = "0.2.1"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py312" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.12
# pyo3 = { version = "0.23.5", features = ["extension-module", "abi3-py312"] }
pyo3 = { version = "0.23.5" }
rand = { version = "0.8", features = ["default", "alloc"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 4

# exclude `extension-module` in testing, maturin develop --features "python-ext"
# https://pyo3.rs/v0.23.5/faq.html#i-cant-run-cargo-test-or-i-cant-build-in-a-cargo-workspace-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
# [features]
# extension-module = ["pyo3/extension-module"]
# abi3 = ["pyo3/abi3-py312"]
# python-ext = ["extension-module", "abi3"]
